// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout cursor makes centered rows with hard breaks and multiple items 1`] = `
[
  [
    0,
    4,
    0,
    0,
    4,
    30,
    0,
  ],
  [
    4,
    7,
    0,
    50,
    3,
    30,
    0,
  ],
  [
    7,
    9,
    0,
    0,
    2,
    30,
    1,
  ],
  [
    9,
    10,
    0,
    100,
    1,
    30,
    1,
  ],
]
`;

exports[`layout cursor makes centered rows with hard breaks and multiple items 2`] = `
Float32Array [
  390,
  60,
  290,
  60,
]
`;

exports[`layout cursor makes centered rows with soft-wrapped breaks 1`] = `
[
  [
    0,
    3,
    0,
    0,
    3,
    30,
    0,
  ],
  [
    3,
    5,
    0,
    50,
    2,
    30,
    0,
  ],
  [
    5,
    7,
    0,
    0,
    2,
    30,
    0,
  ],
  [
    7,
    9,
    0,
    100,
    2,
    30,
    0,
  ],
  [
    9,
    10,
    0,
    150,
    1,
    30,
    0,
  ],
]
`;

exports[`layout cursor makes centered rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;

exports[`layout cursor makes justified rows with soft-wrapped breaks 1`] = `
[
  [
    0,
    3,
    0,
    0,
    3,
    30,
    0,
  ],
  [
    3,
    5,
    100,
    0,
    2,
    30,
    0,
  ],
  [
    5,
    7,
    0,
    0,
    2,
    30,
    0,
  ],
  [
    7,
    9,
    200,
    0,
    2,
    30,
    0,
  ],
  [
    9,
    10,
    0,
    150,
    1,
    30,
    0,
  ],
]
`;

exports[`layout cursor makes justified rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;

exports[`layout cursor makes right-justified rows with soft-wrapped breaks 1`] = `
[
  [
    0,
    3,
    0,
    0,
    3,
    30,
    0,
  ],
  [
    3,
    5,
    0,
    100,
    2,
    30,
    0,
  ],
  [
    5,
    7,
    0,
    0,
    2,
    30,
    0,
  ],
  [
    7,
    9,
    0,
    200,
    2,
    30,
    0,
  ],
  [
    9,
    10,
    0,
    300,
    1,
    30,
    0,
  ],
]
`;

exports[`layout cursor makes right-justified rows with soft-wrapped breaks 2`] = `
Float32Array [
  390,
  150,
]
`;
